slurm_output/old/slurm-48432918.out
compute-a-16-161.o2.rc.hms.harvard.edu
  File "multithreading.py", line 54
    if end_ind==817: print(i)
                   ^
SyntaxError: invalid syntax
